2006-10-27 Jens Tkotz <jens@peino.de> 1.6-alpha2-svn-b15

 * New: function generateCaption()

 * New: function getLabelByIndex()

 * Change: Use label for feature block.
	   Now you can feature any type of item.

2006-10-27 Jens Tkotz <jens@peino.de> 1.6-alpha2-svn-b14

 * New: function toogleButton()

 * New: function toogleBox()

2006-10-27 Jens Tkotz <jens@peino.de> 1.6-alpha2-svn-b13

 * Fix: Save did not work in rearrange items.

 * Fix: Typo in stats-wizard.php prevented the generated url to show up.

 Thanks to Peter Schumacher for finding and reporting those bugs.

 * Fix: Remove -v from jhead, as the output has different structure.

 * Fix: Autorotate rotated in the wrong direction.

 * Fix: still some _(), converted to gTranslate()

2006-10-27 Jens Tkotz <jens@peino.de> 1.6-alpha2-svn-b12

 * Change: Minor things like indenting, code cleaning and phpDoc.

2006-10-23 Jens Tkotz <jens@peino.de> 1.6-alpha2-svn-b11

 * Fix: Fix missing brackets.

2006-10-21 Jens Tkotz <jens@peino.de> 1.6-alpha2-svn-b10

 * Fix: Convert - into _ in varnames for yui! subalbum tree on mainpage.

2006-10-15 Jens Tkotz <jens@peino.de> 1.6-alpha2-svn-b9

 * Fix: Aded icon for feature photo.

 * Fix: Removed second (redundant) link to photoproperties in thumbnail view.
   Thanks to floridave.

2006-10-15 Jens Tkotz <jens@peino.de> 1.6-alpha2-svn-b8

 * Fix: Correct wrong filenames in 'Id' Keyword.
   Thanks to floridave.

2006-10-15 Jens Tkotz <jens@peino.de> 1.6-alpha2-svn-b7

 * Fix: svn properties.

2006-10-15 Jens Tkotz <jens@peino.de> 1.6-alpha2-svn-b6

 * Fix: Missing , typo in lib/stats.php
   Thanks to Georg Naggies from forums.

 * Fix: Show translated text for the stats-link options in config.

 * Indenting in stats includes and lib.

2006-10-14 Jens Tkotz <jens@peino.de> 1.6-alpha2-svn-b5

 * Change: Partly #1410186
   Renamed "rename album" to "Change foldername" as user got confused.
   Also removed this from startpage.
  