@@ -1,3 +1,8 @@
+2006-10-27 Jens Tkotz <jens@peino.de> 1.6-alpha2-svn-b16
+
+ * Change: After saving the album properties,
+	   the tab which was last edited is still selected.
+
 2006-10-27 Jens Tkotz <jens@peino.de> 1.6-alpha2-svn-b15
 
  * New: function generateCaption()
